--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,3 +39,9 @@ ocl = { version = "0.19", optional = true }
 [features]
 default = ["opencl"]
 opencl = ["ocl"]
+
+[profile.release]
+lto = "fat"
+codegen-units = 1
+panic = "abort"
+opt-level = 3
